--- a/services/frontend/src/view/news.pug
+++ b/services/frontend/src/view/news.pug
@@ -10,13 +10,13 @@ block content
         +qianli-badge-title(['NEWS', 'INFORMATION'], '新闻动态')(large light vertical qianli-animate='animate-fade-in')
 
         .news-post
-          p.news-post-title #{post.title}
-          p.news-post-desc #{post.desc}
+          p.news-post-title(qianli-animate='animate-fade-in') #{post.title}
+          p.news-post-desc(qianli-animate='animate-fade-in') #{post.desc}
 
-        +qianli-ghost-button('VIEW MORE')(href=`${post.link}` mode="dark" style="column-gap: 60px")
+        +qianli-ghost-button('VIEW MORE')(href=`/post/${post.id}` mode="dark" qianli-animate='animate-fade-in' style="column-gap: 60px")
 
       .news-center-cover
-        .news-center-cover__inner
+        .news-center-cover__inner(qianli-animate='animate-fade-in')
           img(src=`${post.img}`)
 
   section#news-container
@@ -24,16 +24,16 @@ block content
       ol.news-list
         for item of news
           li.news-item
-            .news-item-cover
+            .news-item-cover(qianli-animate='animate-fade-in')
               img(src=`${item.img}`)
-            a.news-item-content(href=`${item.link}`)
-              p.news-item-category
+            a.news-item-content(href=`/post/${item.id}`)
+              p.news-item-category(qianli-animate='animate-fade-in')
                 b #{item.category}
-              p.news-item-title
+              p.news-item-title(qianli-animate='animate-fade-in')
                 b #{item.title}
-              p.news-item-date
-                b #{item.date}
-              img.news-item-icon(src="/image/case_r.png")
+              p.news-item-date(qianli-animate='animate-fade-in')
+                b #{layout.helper.dayjs(item.date).format('YYYY-MM-DD')}
+              img.news-item-icon(src="/image/case_r.png" qianli-animate='animate-fade-in')
 
 block footer
   script(type="text/javascript" charset="utf-8").
