--- a/services/frontend/src/view/news.pug
+++ b/services/frontend/src/view/news.pug
@@ -28,7 +28,7 @@ block content
               img(src=`${item.img}`)
             a.news-item-content(href=`/post/${item.id}`)
               p.news-item-category(qianli-animate='animate-fade-in')
-                b #{item.category}
+                b #{item.category_name}
               p.news-item-title(qianli-animate='animate-fade-in')
                 b #{item.title}
               p.news-item-date(qianli-animate='animate-fade-in')
