data: 更新人才招聘数据

--- a/services/frontend/src/view/contact.pug
+++ b/services/frontend/src/view/contact.pug
@@ -61,7 +61,7 @@ block content
               td
                 b #{item.num}
               td
-                b #{item.department}
+                b #{item.department_name}
               td
                 b #{item.city}
               td
