--- a/services/frontend/src/view/contact.pug
+++ b/services/frontend/src/view/contact.pug
@@ -32,7 +32,7 @@ block content
             button.qianli-button(type="submit") 提交
 
   section#contact-job
-    .contact-job-inner
+    .contact-job-inner#job
       +qianli-badge-title(['TALENT', 'RECRUITMENT'], '人才招聘')(large center qianli-animate='animate-fade-in')
 
       table.contact-job-table
