feat: 优化 post 添加分页器

--- a/services/frontend/src/view/components/index.pug
+++ b/services/frontend/src/view/components/index.pug
@@ -3,6 +3,7 @@ include ./qianli-badge-title.pug
 include ./qianli-button-group.pug
 include ./qianli-button.pug
 include ./qianli-breadcrumb.pug
+include ./qianli-pagination.pug
 
 mixin swiper(pagination = true)
   .swiper-container&attributes(attributes)
