--- a/services/frontend/src/view/index.pug
+++ b/services/frontend/src/view/index.pug
@@ -186,7 +186,7 @@ block content
         each item,index in news
           a.news-item(href='javascript:;' qianli-animate='animate-fade-in' class=`${(index === 0 && 'active') || ''}`)
             .news-item-content
-              time.news-item-time #{item.date}
+              time.news-item-time #{layout.helper.dayjs(item.date).format('YYYY-MM-DD')}
               p.news-item-text #{item.title}
             .news-item-icon
               img.news-item-icon__dark(src="/image/new_r.png")
