feat[admin]: 添加公共组件 优化主题

--- a/services/admin/src/styles/index.less
+++ b/services/admin/src/styles/index.less
@@ -4,9 +4,19 @@
 @import './transition.less';
 @import './theme.less';
 
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+
 html,
 body {
   height: 100%;
+}
+
+body {
+  color: #333;
 }
 
 #app {
