--- a/services/admin/src/styles/theme.less
+++ b/services/admin/src/styles/theme.less
@@ -1,6 +1,7 @@
 [data-theme="light"],
 ::before,
 ::after {
+  --color-primary: rgb(121,107,175);
   --color-background: rgb(243, 243, 243);
   --layout-item-hover: var(--color-background);
   --color-logo-background: rgb(121,107,175);
@@ -10,6 +11,7 @@
 [data-theme="dark"],
 ::before,
 ::after {
+  --color-primary: rgb(64,50,125);
   --color-background: rgba(255, 255, 255, 0.09);
   --layout-item-hover: var(--color-background);
   --color-logo-background: rgb(64,50,125);
