chore: 调整图片路径为绝对路径

--- a/services/frontend/src/style/contact.styl
+++ b/services/frontend/src/style/contact.styl
@@ -2,7 +2,7 @@
   position relative
   min-height 100vh
   padding 60px 0 80px
-  background-image url(/upload/20220614170308256340.png)
+  background-image url(//localhost:3000/upload/20220614170308256340.png)
   background-repeat no-repeat
   background-size cover
 
