--- a/services/frontend/src/style/index.styl
+++ b/services/frontend/src/style/index.styl
@@ -411,7 +411,7 @@
     height auto
     padding 88px 8%
     overflow hidden
-    background-image url("/image/product_center_side.png")
+    background-image url("//localhost:3000/image/product_center_side.png")
     background-repeat no-repeat
     background-size cover
 
@@ -431,7 +431,7 @@
       position: relative;
       width: 80%;
       padding-top: 80%;
-      background-image url(/image/product_center_side_legend.png)
+      background-image url(//localhost:3000/image/product_center_side_legend.png)
       background-repeat: no-repeat;
       background-size: cover;
       border-radius: 50%;
@@ -497,7 +497,7 @@
       width 110%
       height 110%
       content ''
-      background-image url(/image/product_center_side_legend.png)
+      background-image url(//localhost:3000/image/product_center_side_legend.png)
       background-repeat no-repeat
       background-size cover
       animation product-center-side-legend 4s infinite linear forwards
@@ -525,7 +525,7 @@
     position relative
     padding 76px
     overflow hidden
-    background-image url(/upload/20220614174050176946.png)
+    background-image url(//localhost:3000/upload/20220614174050176946.png)
     background-repeat no-repeat
     background-size cover
 
@@ -533,7 +533,7 @@
       position absolute
       inset 0
       z-index 0
-      background-image url(/image/indAbR_top01.png)
+      background-image url(//localhost:3000/image/indAbR_top01.png)
       background-repeat no-repeat
       background-position right center
       background-size 50%
@@ -579,10 +579,10 @@
   background-size cover
 
 .navigation-inner-job
-  background-image url(/upload/20220614174146439827.png)
+  background-image url(//localhost:3000/upload/20220614174146439827.png)
 
 .navigation-inner-news
-  background-image url(/upload/20220614174146295499.png)
+  background-image url(//localhost:3000/upload/20220614174146295499.png)
 
 .navigation-item
   position relative
@@ -712,7 +712,7 @@
     flex-direction column
     align-items flex-start
     justify-content center
-    background-image url('/upload/20220614174050176946.png')
+    background-image url('//localhost:3000/upload/20220614174050176946.png')
 
     .news-item-icon__light
       display block
