--- a/services/frontend/src/style/product_detail.styl
+++ b/services/frontend/src/style/product_detail.styl
@@ -2,7 +2,7 @@
   position relative
   // padding 80px 0 80px
   padding 140px 0 80px
-  background-image url(/image/proXq_bg.png)
+  background-image url(//localhost:3000/image/proXq_bg.png)
   background-repeat no-repeat
   background-size cover
 
