--- a/services/frontend/src/view/about.pug
+++ b/services/frontend/src/view/about.pug
@@ -34,9 +34,9 @@ block content
                   img(src=`${item.img}`)
             block pagination
               a.about-environment__swiper-button.prev(href="javascript:;")
-                img(src="/image/arrow_left_small.png")
+                img(src="//localhost:3000/image/arrow_left_small.png")
               a.about-environment__swiper-button.next(href="javascript:;")
-                img(src="/image/arrow_right_small.png")
+                img(src="//localhost:3000/image/arrow_right_small.png")
 
   //- 专利展示
   #patent
@@ -57,11 +57,11 @@ block content
 
         .about-patent-pagination
           a.about-patent__swiper-button.prev(href="javascript:;")
-            img(src="/image/arrow_left_2.png")
+            img(src="//localhost:3000/image/arrow_left_2.png")
             span prev
           a.about-patent__swiper-button.next(href="javascript:;")
             span next
-            img(src="/image/arrow_right_2.png")
+            img(src="//localhost:3000/image/arrow_right_2.png")
 
   //- 合作伙伴
   #partner
@@ -72,9 +72,9 @@ block content
         .flex1
         .about-partner__button-group
           a.about-partner__button.prev(href="javascript:;")
-            img(src="/image/case_l.png")
+            img(src="//localhost:3000/image/case_l.png")
           a.about-partner__button.next(href="javascript:;")
-            img(src="/image/case_r.png")
+            img(src="//localhost:3000/image/case_r.png")
       .about-partner-swiper(qianli-animate='animate-fade-in')
         .swiper-container
           .swiper-wrapper
