--- a/services/frontend/src/view/news.pug
+++ b/services/frontend/src/view/news.pug
@@ -32,7 +32,7 @@ block content
               p.news-item-title(qianli-animate='animate-fade-in')
                 b #{item.title}
               p.news-item-date(qianli-animate='animate-fade-in')
-                b #{layout.helper.dayjs(item.date).format('YYYY-MM-DD')}
+                b #{item.date}
               img.news-item-icon(src="//localhost:3000/image/case_r.png" qianli-animate='animate-fade-in')
 
       .flex.justify-center
