feat: 开发产品编辑详情模块 【admin】AbstractEntity 添加 公共上传方法 doUpload 添加公共类型 Utils 【backend】优化 upload 模块 优化 product 模块

--- a/services/frontend/src/view/product_detail.pug
+++ b/services/frontend/src/view/product_detail.pug
@@ -20,7 +20,7 @@ block content
             h2.product-detail-part(qianli-animate='animate-fade-in') 产品功能
 
             ol.product-detail-parts(qianli-animate='animate-fade-in')
-              - var details = detail.detail.split(/\r|\n/)
+              - var details = detail.desc.split(/\r|\n/)
               - details.pop()
               for item of details
                 li.product-detail__item
