--- a/services/frontend/src/style/about.styl
+++ b/services/frontend/src/style/about.styl
@@ -2,7 +2,7 @@
   position relative
   width 100%
   padding 80px 0 140px
-  background-image url(//localhost:3000/image/about_banner_bg.png)
+  background-image url(/image/about_banner_bg.png)
   background-repeat no-repeat
   background-size cover
 
