--- a/services/frontend/src/view/layouts/index.pug
+++ b/services/frontend/src/view/layouts/index.pug
@@ -58,7 +58,7 @@ html(lang="zh-CN")
     header(class=`${(layout.isIndex || layout.isNews) ? 'qianli-header-ghost' : 'qianli-header'}`)
       .qianli-header-inner
         a.qianli-header-logo(href="/")
-          img(src="//localhost:3000/image/logo_light.png")
+          img(src="/image/logo_light.png")
 
         .flex1
 
@@ -89,11 +89,11 @@ html(lang="zh-CN")
 
     footer.qianli-footer
       .qianli-footer-top
-        img.qianli-footer-logo(src="//localhost:3000/image/logo_dark.png")
+        img.qianli-footer-logo(src="/image/logo_dark.png")
         .flex1
         span CLICK TO TOP
         a(href="javascript:;")
-          img.qianli-footer-backtop(src="//localhost:3000/image/back_top.png")
+          img.qianli-footer-backtop(src="/image/back_top.png")
 
       section.qianli-footer-inner
         .qianli-footer-content
@@ -112,11 +112,11 @@ html(lang="zh-CN")
 
             .qianli-footer-concat-media
               a(href="javascript:;")
-                img(src="//localhost:3000/image/icon_sina.png")
+                img(src="/image/icon_sina.png")
               a(href="javascript:;")
-                img(src="//localhost:3000/image/icon_wechat.png")
+                img(src="/image/icon_wechat.png")
               a(href="javascript:;")
-                img(src="//localhost:3000/image/icon_qr.png")
+                img(src="/image/icon_qr.png")
 
           .flex1
             ol.qianli-footer-nav
