--- a/services/frontend/src/style/news.styl
+++ b/services/frontend/src/style/news.styl
@@ -12,7 +12,7 @@
     width 100%
     height 100%
     content ''
-    background url(//localhost:3000/image/new_bg.png)
+    background url(/image/new_bg.png)
     background-repeat no-repeat
     background-size contain
 
